welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:1: error: type mismatch;
 found   : Unit
 required: Int
def golomb(num:Int): Int = {
                           ^